radware/olegm/d3morning/deploy-bear.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bear-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: bear
      type: animals
  template:
    metadata:
      labels:
        app: bear
        type: animals
    spec:
      containers:
      - name: bear
        image: supergiantkir/animals:bear
        ports:
        - containerPort: 80
