radware/olegm/d3morning/deploy-moose.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moose-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: moose
      type: moose
  template:
    metadata:
      labels:
        app: moose
        type: moose
    spec:
      containers:
      - name: moose
        image: supergiantkir/animals:moose
        ports:
        - containerPort: 80
