radware/olegm/d3morning/service-bear.yaml

apiVersion: v1
kind: Service
metadata:
  name: bear-svc  
  labels:
    type: bear
spec:
  selector:
    type: bear
  ports: 
    - port: 80
      targetPort: 80
  type: ClusterIP
