radware/olegm/d3morning/service-moose.yaml

apiVersion: v1
kind: Service
metadata:
  name: moose-svc  
  labels:
    type: moose
spec:
  selector:
    type: moose
  ports: 
    - port: 80
      targetPort: 80
  type: ClusterIP
