radware/olegm/d3morning/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: animals-a
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "50"
    
spec:
  ingressClassName: nginx
  rules:
  - host: animals-54.74.19.220.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
             name: moose-svc
             port:
                number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: animals-b

spec:
  ingressClassName: nginx
  rules:
  - host: animals-54.74.19.220.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
             name: bear-svc
             port:
                number: 80
